--- a/KUMA/KUMA.wk3/문자열/문자열.md
+++ b/KUMA/KUMA.wk3/문자열/문자열.md
@@ -48,7 +48,7 @@
   ```
 ## 1769 3의 배수
 * 큰 자연수 x를 리스트 x에 한 자리씩 int형으로 저장
-* 리스트 x의 길이가 1인 것으로 자연수 x가 1이 되었는 지 판별했다.
+* 리스트 x의 길이가 1인 것으로 자연수 x가 한 자리가 되었는 지 판별했다.
   ```python
   if len(x)==1:
     x=x[0]
