--- a/KUMA/KUMA.wk3/자료구조/자료구조.md
+++ b/KUMA/KUMA.wk3/자료구조/자료구조.md
@@ -11,14 +11,6 @@
   ```
 * 비슷하게 find()로 인덱스만 찾고 문자열을 리스트화 해서 del 함수로 삭제하고 다시 문자열화 하려 했는데 join 때문에 시간초과
 * 결국 한글자씩 받아와서 스택에 저장하고 그 글자가 bomb의 끝자리일 경우 bomb의 길이만큼 스택에서 비교한 뒤 일치하면 모두 pop 시키는 형태로 구현함
-* 예외처리
-  ```python
-  if len(S)<size:
-      print(S)
-  elif len(S)==size:
-      if S==''.join(bomb):
-          print('FRULA')
-  ```
 * bomb과 stack의 요소 비교를 위해 bomb을 뒤집어줬다.
   ```python
   bomb.reverse()
@@ -36,15 +28,23 @@
       else:
           stack.append(x)  
   ```
+* 예외처리
+  ```python
+  if len(S)<size:
+      print(S)
+  elif len(S)==size:
+      if S==''.join(bomb):
+          print('FRULA')
+  ```
 ## 10799 쇠막대기
 * 스택이나 덱 사용해야할거같은데 앞에서부터 읽는게 편해서 덱으로 했음
-* '('일 때 다음 요소가 ')' 인지 '('인지를 나눠서 수행하는 작업을 달리 했음
-* ')'일 때 - 레이저라는 뜻이니 현재 막대기 수 만큼 총합에 더해줌
+* '('이 나오면 다음 요소가 ')' 인지 '('인지를 나눠서 수행하는 작업을 달리 했음
+  * ')'일 때 - 레이저라는 뜻이니 현재 막대기 수 만큼 총합에 더해줌
   ```python
   if tmp==')':
     Sum+=cnt
   ```
-* '('일 때 - 막대기라는 뜻이니 현재 막대기 수를 +1해줌
+  * '('일 때 - 막대기라는 뜻이니 현재 막대기 수를 +1해줌
   ```python
   else:
     cnt+=1
